--- a/src/component/sections/Contacto/contactos.css
+++ b/src/component/sections/Contacto/contactos.css
@@ -1,7 +1,7 @@
 .contactos {
     width: 100%;
     padding: 1rem;
-    display: grid;
-    grid-template-columns: 1fr 2fr 1fr;
-    gap: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
